tests/negative/gold/dot_test.gold
tests/negative/dot_test.toit:8:10: error: Incomplete expression
  prefix.
         ^
tests/negative/dot_test.toit:9:9: error: Unresolved identifier: 'unresolved'
  print unresolved
        ^~~~~~~~~~
Compilation failed.
